Fixed Reports bugs

--- a/CRM/views/report-client-history.ejs
+++ b/CRM/views/report-client-history.ejs
@@ -34,8 +34,8 @@
       <!-- Select Agent from Prepopulated list of options -->
                 <div class="form-row">
                   <div class="form-group col-auto">
-                      <label for="agentSelect">Client</label>
-                        <select class="form-control" name="agentSelect" id="agentSelect" onChange="changeAgent(this.value);" required>
+                      <label for="clientSelect">Client</label>
+                        <select class="form-control" name="clientSelect" id="clientSelect" required>
                           <%
                               var list = '<option value="" disabled selected>Select</option>';
                               for (i = 0; i < clientList.length; i++) {
