--- a/CRM/views/review-client-upload.ejs
+++ b/CRM/views/review-client-upload.ejs
@@ -26,87 +26,93 @@
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 mx-3">
-         <form action="/upload-clients" method="post">
-           <input type="text" class="form-control" id="csvData" name="csvData" value="<%= JSONClients %>" hidden>
-           <table class="table table-bordered">
-             <thead class="thead-dark">
-               <tr>
-                 <th style="width: 5%" scope="col">Agent Abbrev:</th>
-                 <th style="width: 10%" scope="col">Client Name:</th>
-                 <th style="width: 10%" scope="col">Client Phone:</th>
-                 <th style="width: 10%" scope="col">Client Fax:</th>
-                 <th style="width: 15%" scope="col">Client Address 1:</th>
-                 <th style="width: 10%" scope="col">Client Address 1 Type:</th>
-                 <th style="width: 15%" scope="col">Client Address 2:</th>
-                 <th style="width: 10%" scope="col">Client Address 2 Type:</th>
-                 <th style="width: 15%" scope="col">Client Address 3:</th>
-                 <th style="width: 10%" scope="col">Client Address 3 Type:</th>
-                 <th style="width: 15%" scope="col">Client Address 4:</th>
-                 <th style="width: 10%" scope="col">Client Address 4 Type:</th>
-                 <th style="width: 15%" scope="col">Client Email 1:</th>
-                 <th style="width: 15%" scope="col">Client Email 2:</th>
-                 <th style="width: 5%" scope="col">Client Prod OX:</th>
-                 <th style="width: 5%" scope="col">Client Prod PP:</th>
-                 <th style="width: 5%" scope="col">Client Prod TP:</th>
-                 <th style="width: 25%" scope="col">Client Notes:</th>
-                 <th style="width: 10%" scope="col">Client Status:</th>
 
-               </tr>
-             </thead>
-             <tbody>
-               <%
-                 var list = '';
-                 for (i = 0; i < clients.length; i++) {
-                   list += '<tr>';
-                   list += '<td> <select class="form-control" id="agentAbbrev[' + i + ']" name="agentAbbrev[' + i + ']" required>';
-                     list += '<option value="" disabled selected>Select</option>';
+          <div class="card w-auto">
+            <h3 class="card-header">Import Client Tool</h3>
+            <div class="card-body">
+             <form action="/upload-clients" method="post">
+               <input type="text" class="form-control" id="csvData" name="csvData" value="<%= JSONClients %>" hidden>
+               <table class="table table-bordered table-responsive">
+                 <thead class="thead-dark">
+                   <tr>
+                     <th scope="col">Agent Abbrev:</th>
+                     <th scope="col">Client Name:</th>
+                     <th scope="col">Client Phone:</th>
+                     <th scope="col">Client Fax:</th>
+                     <th scope="col">Client Address 1:</th>
+                     <th scope="col">Client Address 1 Type:</th>
+                     <th scope="col">Client Address 2:</th>
+                     <th scope="col">Client Address 2 Type:</th>
+                     <th scope="col">Client Address 3:</th>
+                     <th scope="col">Client Address 3 Type:</th>
+                     <th scope="col">Client Address 4:</th>
+                     <th scope="col">Client Address 4 Type:</th>
+                     <th scope="col">Client Email 1:</th>
+                     <th scope="col">Client Email 2:</th>
+                     <th scope="col">Client Prod OX:</th>
+                     <th scope="col">Client Prod PP:</th>
+                     <th scope="col">Client Prod TP:</th>
+                     <th scope="col">Client Notes:</th>
+                     <th scope="col">Client Status:</th>
+                   </tr>
+                 </thead>
+                 <tbody>
+                   <%
+                     var list = '';
+                     for (i = 0; i < clients.length; i++) {
+                       list += '<tr>';
+                       list += '<th> <select class="form-control" id="agentAbbrev[' + i + ']" name="agentAbbrev[' + i + ']" required>';
+                         list += '<option value="" disabled selected>Select</option>';
 
-                   for (k = 0; k < agentList.length; k++) {
-                     list += '<option>' + agentList[k].agentAbbrev + '</option>';
-                   }
-                   list += '</select> </td>';
-                   list += '<td>' + clients[i].clientName + '</td>';
-                   list += '<td>' + clients[i].clientPhone + '</td>';
-                   list += '<td>' + clients[i].clientFax + '</td>';
-                   list += '<td>' + clients[i].clientAddress1 + '</td>';
-                   list += '<td><select class="form-control" id="clientAddress1Type[' + i + ']" name="clientAddress1Type[' + i + ']" required>';
-                     list += '<option value="" disabled selected>Select</option>';
-                     list += '<option>Contact Address</option>';
-                     list += '<option>Delivery Address</option>';
-                   list += '</select> </td>';
-                   list += '<td>' + clients[i].clientAddress2 + '</td>';
-                   list += '<td><select class="form-control" id="clientAddress2Type[' + i + ']" name="clientAddress2Type[' + i + ']">';
-                     list += '<option value=""></option>';
-                     list += '<option>Contact Address</option>';
-                     list += '<option>Delivery Address</option>';
-                   list += '</select> </td>';
-                   list += '<td>' + clients[i].clientAddress3 + '</td>';
-                   list += '<td><select class="form-control" id="clientAddress3Type[' + i + ']" name="clientAddress3Type[' + i + ']">';
-                     list += '<option value=""></option>';
-                     list += '<option>Contact Address</option>';
-                     list += '<option>Delivery Address</option>';
-                   list += '</select> </td>';
-                   list += '<td>' + clients[i].clientAddress4 + '</td>';
-                   list += '<td><select class="form-control" id="clientAddress4Type[' + i + ']" name="clientAddress4Type[' + i + ']">';
-                     list += '<option value=""></option>';
-                     list += '<option>Contact Address</option>';
-                     list += '<option>Delivery Address</option>';
-                   list += '</select> </td>';
-                   list += '<td>' + clients[i].clientEmail1 + '</td>';
-                   list += '<td>' + clients[i].clientEmail2 + '</td>';
-                   list += '<td><input class="form-check-input" type="checkbox" name="clientProdOX[' + i + ']" value="true"/></td>';
-                   list += '<td><input class="form-check-input" type="checkbox" name="clientProdPP[' + i + ']" value="true"/></td>';
-                   list += '<td><input class="form-check-input" type="checkbox" name="clientProdTP[' + i + ']" value="true"/></td>';
-                   list += '<td>' + clients[i].clientNotes + '</td>';
-                   list += '<td>Enabled</td>';
-                   list += '</tr>'
-                 }
-               %>
-               <%- list %>
-             </tbody>
-           </table>
-           <input class="btn btn-primary" type="submit" value="Confirm Upload">
-         </form>
+                       for (k = 0; k < agentList.length; k++) {
+                         list += '<option>' + agentList[k].agentAbbrev + '</option>';
+                       }
+                       list += '</select> </th>';
+                       list += '<td>' + clients[i].clientName + '</td>';
+                       list += '<td>' + clients[i].clientPhone + '</td>';
+                       list += '<td>' + clients[i].clientFax + '</td>';
+                       list += '<td>' + clients[i].clientAddress1 + '</td>';
+                       list += '<td><select class="form-control" id="clientAddress1Type[' + i + ']" name="clientAddress1Type[' + i + ']" required>';
+                         list += '<option value="" disabled selected>Select</option>';
+                         list += '<option>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       list += '</select> </td>';
+                       list += '<td>' + clients[i].clientAddress2 + '</td>';
+                       list += '<td><select class="form-control" id="clientAddress2Type[' + i + ']" name="clientAddress2Type[' + i + ']">';
+                         list += '<option value=""></option>';
+                         list += '<option>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       list += '</select> </td>';
+                       list += '<td>' + clients[i].clientAddress3 + '</td>';
+                       list += '<td><select class="form-control" id="clientAddress3Type[' + i + ']" name="clientAddress3Type[' + i + ']">';
+                         list += '<option value=""></option>';
+                         list += '<option>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       list += '</select> </td>';
+                       list += '<td>' + clients[i].clientAddress4 + '</td>';
+                       list += '<td><select class="form-control" id="clientAddress4Type[' + i + ']" name="clientAddress4Type[' + i + ']">';
+                         list += '<option value=""></option>';
+                         list += '<option>Contact Address</option>';
+                         list += '<option>Delivery Address</option>';
+                       list += '</select> </td>';
+                       list += '<td>' + clients[i].clientEmail1 + '</td>';
+                       list += '<td>' + clients[i].clientEmail2 + '</td>';
+                       list += '<td><input class="form-check-input" type="checkbox" name="clientProdOX[' + i + ']" value="true"/></td>';
+                       list += '<td><input class="form-check-input" type="checkbox" name="clientProdPP[' + i + ']" value="true"/></td>';
+                       list += '<td><input class="form-check-input" type="checkbox" name="clientProdTP[' + i + ']" value="true"/></td>';
+                       list += '<td>' + clients[i].clientNotes + '</td>';
+                       list += '<td>Enabled</td>';
+                       list += '</tr>'
+                     }
+                   %>
+                   <%- list %>
+                 </tbody>
+               </table>
+
+               <input class="btn btn-primary" type="submit" value="Confirm Upload">
+             </form>
+           </div>
+         </div>
         </main>
       </main>
     </div>
