--- a/CRM/views/search-client.ejs
+++ b/CRM/views/search-client.ejs
@@ -27,12 +27,9 @@
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 mx-3">
-            <div class="card w-auto">
-              <h3 class="card-header">View/Edit Client</h3>
-                <form id="search-client" name="search-client" method="post" action="/search-client">
-              <div class="card-body">
-
-          <!-- Select Client from Prepopulated list of options -->
+            <form id="search-client" name="search-client" method="post" action="/search-client">
+            <h3>View/Edit Client</h3>
+            <!-- Select Client from Prepopulated list of options -->
             <div class="form-row">
               <div class="form-group col-12">
                 <label for="clientSelect">Select Client</label>
@@ -55,9 +52,6 @@
                       </form>
                     </div>
                   </div>
-
-                </div>
-              </div>
         </main>
       </main>
     </div>
