--- a/CRM/views/search-event.ejs
+++ b/CRM/views/search-event.ejs
@@ -26,11 +26,10 @@
       <main class="c-main">
         <!-- Main content here -->
         <main class="main mt-2 mx-3">
-            <div class="card w-auto">
-              <h3 class="card-header">View/Edit Event</h3>
-              <form id="search-event" name="search-event" method="post" action="/search-event">
-              <div class="card-body">
 
+              <form id="search-event" name="search-event" method="post" action="/search-event">
+
+              <h3>View/Edit Event</h3>
           <!-- Select Agent from Prepopulated list of options -->
                   <div class="form-row">
                     <div class="form-group col-12">
@@ -65,9 +64,6 @@
                       <input class="btn btn-primary" type="submit" value="Submit">
                     </div>
                   </div>
-
-                </div>
-              </div>
         </main>
       </main>
     </div>
