--- a/CRM/views/view-contact.ejs
+++ b/CRM/views/view-contact.ejs
@@ -145,7 +145,7 @@
             <h3 class="card-header">View/Edit Contact</h3>
             <div class="card-body">
           <h4> Contact Information</h4>
-          <table class="table table-bordered">
+          <table class="table table-bordered px-2 py-2">
             <thead class="thead-dark">
               <tr>
                 <th style="width: 15%" scope="col" class="align-middle">Name:</th>
