--- a/CRM/views/entry-client.ejs
+++ b/CRM/views/entry-client.ejs
@@ -23,15 +23,12 @@
       <% include partials/header %>
     </header>
     <div class="c-body">
-      <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main my-3 mx-3">
           <form id="formAddClient" name="addClient" method="post" action="/addClient">
-          <div class="card w-auto">
-            <h3 class="card-header">Client Information</h3>
-            <div class="card-body">
 
           <!-- Client Name & Agent Assignment-->
+            <h3>Client Information</h3>
             <div class="form-row">
               <div class="form-group col-12 col-md-auto">
                 <label for="clientName">Client Name</label>
@@ -145,11 +142,7 @@
 
           <button type="submit" class="btn btn-primary btn-lg">Submit</button>
           </form>
-
-        </div>
-      </div>
         </main>
-      </main>
     </div>
     <footer class="c-footer">
       <!-- Footer content here -->
