--- a/CRM/views/list-event.ejs
+++ b/CRM/views/list-event.ejs
@@ -25,12 +25,12 @@
     <div class="c-body">
       <main class="c-main">
         <!-- Main content here -->
-        <main class="main mt-2 mx-3">
+        <main class="main my-2 mx-3">
           <form id="formListEvent" name="list-event" method="post" action="/list-event" onsubmit="enableFields()">
           <input type="name" class="form-control" id="clientName" name="clientName" value="<%= clientName %>" hidden>
-          <div class="card w-auto">
-            <h3 class="card-header">List Events</h3>
-            <div class="card-body">
+
+          <h3>List Events</h3>
+
           <h4> Event Information</h4>
           <p>Client Name: <%= clientName %></p>
           <p>Date Range Start: <%= dateStartInput %></p>
@@ -39,7 +39,7 @@
     <!-- Event History Listing -->
 
           <div class="table-responsive">
-             <table class="table table-bordered">
+             <table class="table table-bordered bg-white">
               <thead class="thead-dark">
                 <tr>
                   <th scope="col"></th>
@@ -85,8 +85,7 @@
               }
             </script>
           </div>
-        </div>
-      </div>
+
 
         </main>
       </main>
